--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,9 @@
   "version": "0.3.1",
   "description": "Make your life's is simple!",
   "icons": {
-    "16": "icons/UKN.png",
-    "48": "icons/UKN.png",
-    "128": "icons/UKN.png"
+    "16": "/assets/icons/UKN.png",
+    "48": "/assets/icons/UKN.png",
+    "128": "/assets/icons/UKN.png"
   },
   "permissions": [
     "tabs",
