--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3001",
     "build": "vite build",
     "build-watch": "vite build --watch",
     "preview": "vite preview --port 5050",
@@ -12,7 +12,16 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
+    "@ily1606/pro-light-svg-fontawesome": "^0.1.0",
+    "@ily1606/pro-regular-svg-fontawesome": "^0.1.0",
+    "@ily1606/pro-solid-svg-fontawesome": "^0.1.0",
+    "@ily1606/vue-font-awesome-pro": "^0.1.3",
     "@lottiefiles/lottie-player": "^1.5.7",
+    "@sentry/tracing": "^7.16.0",
+    "@sentry/vue": "^7.16.0",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
