--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build-watch": "vite build --watch",
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "build:env": "node build_env.mjs"
+    "build:env": "node build_env.mjs",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@ily1606/pro-light-svg-fontawesome": "^0.1.0",
     "@ily1606/pro-regular-svg-fontawesome": "^0.1.0",
@@ -33,6 +36,8 @@
     "autoprefixer": "^10.4.12",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "jest": "^29.2.1",
+    "babel-jest": "^29.2.1",
     "postcss": "^8.4.17",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.8",
