--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -34,10 +36,10 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.12",
+    "babel-jest": "^29.2.1",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^29.2.1",
-    "babel-jest": "^29.2.1",
     "postcss": "^8.4.17",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.8",
