--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview --port 5050",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "build:env": "node build_env.mjs",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
@@ -39,7 +40,9 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^8.0.1",
     "jest": "^29.2.1",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.17",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.8",
@@ -50,5 +53,10 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "lint-staged": {
+    "*.{vue,js,mjs,css,scss}": [
+      "npm run lint"
+    ]
+}
 }
