--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -58,5 +60,5 @@
     "*.{vue,js,mjs,css,scss}": [
       "npm run lint"
     ]
-}
+  }
 }
