--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.12",
     "babel-jest": "^29.2.1",
     "eslint": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.6.2",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^8.0.1",
     "jest": "^29.2.1",
@@ -58,7 +59,7 @@
     "not ie 11"
   ],
   "lint-staged": {
-    "*.{vue,js,mjs,css,scss}": [
+    "*.{vue,js,mjs}": [
       "npm run lint"
     ]
   }
