--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "solarlunar": "^2.0.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
