--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "solarlunar": "^2.0.7",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
